--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </section>
 
         <section class="info-section">
-            <h2>Más información</h2>
-            <p>La AMOC es un componente clave del sistema climático. Su colapso tendría consecuencias graves en el clima global.</p>
+            <h2>¿Qué es la AMOC y que esta ocurriendo con ella?</h2>
+            <p>La AMOC es un sistema de corrientes marinas que se ocupa de regular la temperatura en la Tierra. Debido al calentamiento global esta se está debilitando y se está intentando prevenir su desaparición con reuniones como "La cumbre del Clima en Paris" o "El protocolo de Kyoto". Ambos, a pesar de tener las ideas claras, no se pudieron cumplir debido a la gran ambicion de los objetivos propuestos. Su desaparición tendria consecuencias inimaginables para casi todo ser vivo que habita en la Tierra, ya que cambiarían todos los ecosistemas que conocemos y muchos seres vivos no serían capaces de adaptarse.</p>
             <img src="images/amoc3.jpg" alt="AMOC Conceptual">
             <p>Para aprender más, visita <a href="https://www.climate.gov" target="_blank" title="Ir a Climate.gov">Climate.gov</a></p>
         </section>
