--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <main>
         <section class="images-section">
             <h2>Imágenes sobre la AMOC</h2>
-            <img src="https://www.climate.gov/sites/default/files/styles/full_width_620_original_image/public/2023-07/ClimateGov_AMOC_1600px.jpg" 
+            <img src="https://es.wikipedia.org/wiki/Circulaci%C3%B3n_de_vuelco_meridional_del_Atl%C3%A1ntico#/media/Archivo:OCP07_Fig-6.jpg" 
                  alt="Diagrama de la circulación AMOC" 
                  class="clickable" 
                  id="img1"
